--- a/grades/index.html
+++ b/grades/index.html
@@ -160,7 +160,7 @@
 <header id="header" style="height: 100px; position: absolute; width: 100%; top: 0%;">
     <div style="width: 100%; height: 100%">
         <div style="width: 100%; height: 62%; top: 0%; position: absolute;">
-            <a class="hover" href="https://isplus2.github.io/site/uploads" title="Directory Lister" style="position: absolute; top: 15%; left: 4%; width: 50px; height:30px;">
+            <a class="hover" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="Directory Lister" style="position: absolute; top: 15%; left: 4%; width: 50px; height:30px;">
                 <img width="100%" src="https://isplus2.github.io/img/upload.png">
             </a>
         
