--- a/grades/אילן שמשוני-Deep Learning - Seminar/index.html
+++ b/grades/אילן שמשוני-Deep Learning - Seminar/index.html
@@ -119,8 +119,8 @@
 <header id="header" style="width: 1097px;">
     <div style="width: 100%; height: 100%">
         <div style="width: 100%; height: 62%; top: 0%; position: absolute;">
-            <a class="hover" href="uploads/" title="Directory Lister" style="position: absolute; top: 20%; left: 6%; width: 50px; height:30px;">
-                <img width="100%" src="../../img/upload.png">
+            <a class="hover" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="Directory Lister" style="position: absolute; top: 20%; left: 6%; width: 50px; height:30px;">
+                <img width="100%" src="../../img/grade.png">
             </a>
         
             <form id="frm" method="POST" onsubmit="return false">
