--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
               <p></p>
             </div>
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://ISPlus2.github.io/site/is" title="חומרים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="חומרים">
                 <h4>חומרים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://ISPlus2.github.io/site/is" title="חומרים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="חומרים">
                 <img src="https://ISPlus2.github.io/img/drive.png" class="serv" alt="חומרים">
               </a>
               <p></p>
@@ -178,21 +178,21 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://ISPlus2.github.io/grades/uploads" title="העלאת ציונים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="העלאת ציונים">
                 <h4>העלאת ציונים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://ISPlus2.github.io/grades/uploads" title="העלאת ציונים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="העלאת ציונים">
                 <img src="https://ISPlus2.github.io/img/grade.png" class="serv" alt="העלאת ציונים">
               </a>
               <p></p>
             </div>
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://ISPlus2.github.io/site/uploads" title="העלאת חומרים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1vTH7aq1kVtGxRn2_uoeZYk9ibEkHg9qX?usp=sharing" title="העלאת חומרים">
                 <h4>העלאת חומרים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://ISPlus2.github.io/site/uploads" title="העלאת חומרים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1vTH7aq1kVtGxRn2_uoeZYk9ibEkHg9qX?usp=sharing" title="העלאת חומרים">
                 <img src="https://ISPlus2.github.io/img/upload.png" class="serv" alt="העלאת חומרים">
               </a>
               <p></p>
