--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
               <p></p>
             </div>
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://ISPlus2.github.io/kdams/tree.php" title="עץ קדמים">
+              <a target="_blank" href="https://ISPlus2.github.io/kdams.html" title="עץ קדמים">
                 <h4>עץ קדמים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://ISPlus2.github.io/kdams/tree.php" title="עץ קדמים">
+              <a target="_blank" href="https://ISPlus2.github.io/kdams.html" title="עץ קדמים">
                 <img src="https://ISPlus2.github.io/img/tree.png" class="serv" alt="עץ קדמים">
               </a>
               
@@ -138,11 +138,11 @@
               <p></p>
             </div>
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="חומרים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1eFV4ld3YjWvgar3sSz2URDXrHNa_TqIe?usp=drive_link" title="חומרים">
                 <h4>חומרים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="חומרים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1eFV4ld3YjWvgar3sSz2URDXrHNa_TqIe?usp=drive_link" title="חומרים">
                 <img src="https://ISPlus2.github.io/img/drive.png" class="serv" alt="חומרים">
               </a>
               <p></p>
@@ -164,11 +164,11 @@
               <p></p>
             </div>
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://ISPlus2.github.io/write/" title="צרו קשר">
+              <a target="_blank" href="https://ISPlus2.github.io/write.html" title="צרו קשר">
                 <h4>צרו קשר</h4>
               </a>
               <br>
-              <a target="_blank" href="https://ISPlus2.github.io/write/" title="צרו קשר">
+              <a target="_blank" href="https://ISPlus2.github.io/write.html" title="צרו קשר">
                 <img src="https://ISPlus2.github.io/img/complain.png" class="serv" alt="צרו קשר">
               </a>
               <p></p>
