--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://ISPlus2.github.io/whatsapp/" title="קישורים לקבוצות">
-                <h4>קישורים לקבוצות</h4>
+              <a target="_blank" href="https://ISPlus2.github.io/whatsapp/" title="קישורים לקבוצות ישנות">
+                <h4>קישורים לקבוצות ישנות</h4>
               </a>
               <br>
-              <a target="_blank" href="https://ISPlus2.github.io/whatsapp/" title="קישורים לקבוצות">
+              <a target="_blank" href="https://ISPlus2.github.io/whatsapp/" title="קישורים לקבוצות ישנות">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/640px-WhatsApp.svg.png" class="serv" alt="קישורים לקבוצות">
               </a>
               <p></p>
