--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://ISPlus2.github.io/whatsapp/" title="קישורים לקבוצות ישנות">
-                <h4>קישורים לקבוצות ישנות</h4>
+              <a target="_blank" href="https://docs.google.com/document/d/1cJGYVycnDmeOqQHAGcqBotfpTB2oAVUPclARGVWuDqs/edit?usp=sharing" title="קישורים לקבוצות קורסים">
+                <h4>קישורים לקבוצות קורסים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://ISPlus2.github.io/whatsapp/" title="קישורים לקבוצות ישנות">
+              <a target="_blank" href="https://docs.google.com/document/d/1cJGYVycnDmeOqQHAGcqBotfpTB2oAVUPclARGVWuDqs/edit?usp=sharing" title="קישורים לקבוצות קורסים">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/640px-WhatsApp.svg.png" class="serv" alt="קישורים לקבוצות">
               </a>
               <p></p>
@@ -138,11 +138,11 @@
               <p></p>
             </div>
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://drive.google.com/drive/folders/1eFV4ld3YjWvgar3sSz2URDXrHNa_TqIe?usp=drive_link" title="חומרים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1y6uMILEAEZ34BF5Vg9w5KGLLG1QDa-Il?usp=sharing" title="חומרים">
                 <h4>חומרים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://drive.google.com/drive/folders/1eFV4ld3YjWvgar3sSz2URDXrHNa_TqIe?usp=drive_link" title="חומרים">
+              <a target="_blank" href="https://drive.google.com/drive/folders/1y6uMILEAEZ34BF5Vg9w5KGLLG1QDa-Il?usp=sharing" title="חומרים">
                 <img src="https://ISPlus2.github.io/img/drive.png" class="serv" alt="חומרים">
               </a>
               <p></p>
@@ -180,11 +180,11 @@
               <p></p>
             </div>
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://drive.google.com/drive/folders/1vTH7aq1kVtGxRn2_uoeZYk9ibEkHg9qX?usp=sharing" title="העלאת חומרים">
+              <a target="_blank" href="https://forms.gle/xgnFBdmky7ysHPig6" title="העלאת חומרים">
                 <h4>העלאת חומרים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://drive.google.com/drive/folders/1vTH7aq1kVtGxRn2_uoeZYk9ibEkHg9qX?usp=sharing" title="העלאת חומרים">
+              <a target="_blank" href="https://forms.gle/xgnFBdmky7ysHPig6" title="העלאת חומרים">
                 <img src="https://ISPlus2.github.io/img/upload.png" class="serv" alt="העלאת חומרים">
               </a>
               <p></p>
