update grades upload link

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://drive.google.com/drive/folders/1g55xy-vd3dqTLcmZlf1khBzCRxo-yuag?usp=sharing" title="העלאת ציונים">
+              <a target="_blank" href="https://forms.gle/GzwGLjQFBBhiUxTr5" title="העלאת ציונים">
                 <h4>העלאת ציונים</h4>
               </a>
               <br>
