--- a/grades/test/template.html
+++ b/grades/test/template.html
@@ -177,7 +177,7 @@
             const table = document.createElement('table');
             const headerRow = document.createElement('tr');
 
-            const headers = ['Year', 'Semester', 'Course', 'Moed', '', '', 'Histogram'];
+            const headers = ['Year', 'Semester', 'Course', 'Moed', 'Histogram'];
             headers.forEach(header => {
                 const th = document.createElement('th');
                 th.textContent = header;
