--- a/write.html
+++ b/write.html
@@ -20,6 +20,7 @@
         <div>
             <h1 style="direction: rtl;">כתבו לנו במייל</h1>
             <h1>is.site.haifa@gmail.com</h1>
+            <h3 style="direction: rtl;">שימו לב: אנחנו לא קשורים למזכירות / סגל</h3>
         </div>
     </center>
 </body>
